corrected contrast

--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -97,3 +97,7 @@ h3 {
     margin: 10px;
     line-height: 1.5em;
 }
+
+h3 { 
+    color: white;
+}
